--- a/Day 4/index.html
+++ b/Day 4/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
 		<link rel="stylesheet" href="style.css" />
+		<title>Clock</title>
 	</head>
 	<body>
-		<fieldset>
-			<legend>Rishi Chourasia</legend>
-		</fieldset>
+		<div class="circle">
+			<div class="line line1"></div>
+			<div class="line line2"></div>
+			<div class="line line3"></div>
+			<div class="center"></div>
+		</div>
 	</body>
 </html>
