Pushed to github

--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -25,7 +25,7 @@
 				<div>
 					<h3 class="heads">Honors & Achievements</h3>
 					<ul>
-						<li>Beechtown Honor Society Member</li>
+						<li>Beechtownd and Honor Society Member</li>
 						<li>Borghilde High School Academic Honor Roll</li>
 						<li>Borghilde Youth Club Leader's Award</li>
 						<li>1st Place Award in Public Speaking</li>
