--- a/Day 5/index.html
+++ b/Day 5/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<h1>Simple Calculator</h1>
+			<h1>Simple Calculator hrhr</h1>
 		</div>
 		<div class="input-section">
 			<input id="input1" type="number" placeholder="Enter First Number: " />
