adding day 35 files

--- a/Day 4/index.html
+++ b/Day 4/index.html
@@ -3,13 +3,20 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="style.css" />
-		<title>Clock</title>
+		<title>Clock
+
+
+
+		</title>
 	</head>
 	<body>
+
 		<div class="circle">
-			<div class="line line1"></div>
-			<div class="line line2"></div>
-			<div class="line line3"></div>
+					<div class="line line1"></div>
+			<div
+			 class="line line2"></div>
+			
+			 <div class="line line3"></div>
 			<div class="center"></div>
 		</div>
 	</body>
