--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -7,7 +7,7 @@
     <title>Letter</title>
   </head>
   <body>
-    <span class="container">
+    <span className="container">
       <h1>Letter to Dio</h1>
       <p>
         Ken's Cheese House <br />
