--- a/Day 12/index.html
+++ b/Day 12/index.html
@@ -13,23 +13,25 @@
 			<title>Todo List</title>
 			<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 			<link rel="stylesheet" href="style.css" />
-			<div class="container">
-				<h1 class="app-title">Todos</h1>
-				<ul class="todo-list js-todo-list"></ul>
-				<div class="empty-state">
-					<svg class="checklist-icon"><use href="#checklist-icon"></use></svg>
-					<h2 class="empty-state__title">Add your first todo</h2>
-					<p class="empty-state__description">
+			<div className="container">
+				<h1 className="app-title">Todos</h1>
+				<ul className="todo-list js-todo-list"></ul>
+				<div className="empty-state">
+					<svg className="checklist-icon">
+						<use href="#checklist-icon"></use>
+					</svg>
+					<h2 className="empty-state__title">Add your first todo</h2>
+					<p className="empty-state__description">
 						What do you want to get done today?
 					</p>
 				</div>
-				<form class="js-form">
+				<form className="js-form">
 					<input
 						autofocus
 						type="text"
 						aria-label="Enter a new todo item"
 						placeholder="E.g. Build a web app"
-						class="js-todo-input"
+						className="js-todo-input"
 					/>
 				</form>
 				<script src="script.js"></script>
