--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -11,9 +11,9 @@
     <fieldset>
       <legend>Rishi Chourasia</legend>
 
-      <div class="left">
+      <div className="left">
         <div>
-          <h3 class="heads">Personal Profile</h3>
+          <h3 className="heads">Personal Profile</h3>
 
           <p>
             Hi! I'm a high school senior with a knack for verbal communication
@@ -23,7 +23,7 @@
         </div>
 
         <div>
-          <h3 class="heads">Honors & Achievements</h3>
+          <h3 className="heads">Honors & Achievements</h3>
           <ul>
             <li>Beechtownd and Honor Society Member</li>
             <li>Borghilde High School Academic Honor Roll</li>
@@ -33,7 +33,7 @@
         </div>
 
         <div>
-          <h3 class="heads">Contact Details</h3>
+          <h3 className="heads">Contact Details</h3>
 
           <p>
             Number: 123-456-7890 Email: hello@reallygreatsite.com Website
@@ -43,7 +43,7 @@
         </div>
 
         <div>
-          <h3 class="heads">Personal Interests</h3>
+          <h3 className="heads">Personal Interests</h3>
           <ul>
             <li>Playing the Piano and Trombone</li>
             <li>Charity Weekend Volunteer Work</li>
@@ -53,12 +53,12 @@
           </ul>
         </div>
       </div>
-      <div class="right">
-        <div class="right_item">
-          <h3 class="heads">Work Experience</h3>
+      <div className="right">
+        <div className="right_item">
+          <h3 className="heads">Work Experience</h3>
 
-          <h3 class="mini_heading heads">Accounts Intern</h3>
-          <p class="mini_heading_1">Plassive Digital Studio Inc. - 2017</p>
+          <h3 className="mini_heading heads">Accounts Intern</h3>
+          <p className="mini_heading_1">Plassive Digital Studio Inc. - 2017</p>
 
           <ul>
             <li>
@@ -68,8 +68,8 @@
             </li>
           </ul>
 
-          <h3 class="mini_heading heads">Accounts Intern</h3>
-          <p class="mini_heading_1">Plassive Digital Studio Inc. - 2017</p>
+          <h3 className="mini_heading heads">Accounts Intern</h3>
+          <p className="mini_heading_1">Plassive Digital Studio Inc. - 2017</p>
 
           <ul>
             <li>
@@ -80,9 +80,9 @@
           </ul>
         </div>
         <div>
-          <h3 class="heads">Academic Background</h3>
-          <h3 class="mini_heading heads">Accounts Intern</h3>
-          <p class="mini_heading_1">Plassive Digital Studio Inc. - 2017</p>
+          <h3 className="heads">Academic Background</h3>
+          <h3 className="mini_heading heads">Accounts Intern</h3>
+          <p className="mini_heading_1">Plassive Digital Studio Inc. - 2017</p>
 
           <ul>
             <li>
@@ -92,8 +92,8 @@
             </li>
           </ul>
 
-          <h3 class="mini_heading">Accounts Intern</h3>
-          <p class="mini_heading_1">Plassive Digital Studio Inc. - 2017</p>
+          <h3 className="mini_heading">Accounts Intern</h3>
+          <p className="mini_heading_1">Plassive Digital Studio Inc. - 2017</p>
 
           <ul>
             <li>
