--- a/Day 5/index.html
+++ b/Day 5/index.html
@@ -6,19 +6,19 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div class="header">
+		<div className="header">
 			<h1>Simple Calculator hrhr</h1>
 		</div>
-		<div class="input-section">
+		<div className="input-section">
 			<input id="input1" type="number" placeholder="Enter First Number: " />
 			<br />
 			<input id="input2" type="number" placeholder="Enter Second Number: " />
 		</div>
-		<div class="button-section">
-			<button class="add">Add +</button>
-			<button class="subtract">Subtract -</button>
-			<button class="multiply">Multiply *</button>
-			<button class="divide">Divide /</button>
+		<div className="button-section">
+			<button className="add">Add +</button>
+			<button className="subtract">Subtract -</button>
+			<button className="multiply">Multiply *</button>
+			<button className="divide">Divide /</button>
 		</div>
 		<h2 id="result">Result:</h2>
 
