--- a/Day 2/index.html
+++ b/Day 2/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="container">
+    <div className="container">
       <h1>Letter to Dio</h1>
       <p>
         Ken's Cheese House <br />
