--- a/Day 4/index.html
+++ b/Day 4/index.html
@@ -3,21 +3,15 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="style.css" />
-		<title>Clock
-
-
-
-		</title>
+		<title>Clock</title>
 	</head>
 	<body>
+		<div className="circle">
+			<div className="line line1"></div>
+			<div className="line line2"></div>
 
-		<div class="circle">
-					<div class="line line1"></div>
-			<div
-			 class="line line2"></div>
-			
-			 <div class="line line3"></div>
-			<div class="center"></div>
+			<div className="line line3"></div>
+			<div className="center"></div>
 		</div>
 	</body>
 </html>
