--- a/Day 8/index.html
+++ b/Day 8/index.html
@@ -8,37 +8,37 @@
 		<link rel="stylesheet" href="./style.css" />
 	</head>
 	<body>
-		<div class="container">
-			<div class="movie_screen"></div>
-			<div class="info">
-				<h2>Booking seats: <span class="booking_seats"></span></h2>
-				<h2>Remaining seats: <span class="remaining_seats"></span></h2>
+		<div className="container">
+			<div className="movie_screen"></div>
+			<div className="info">
+				<h2>Booking seats: <span className="booking_seats"></span></h2>
+				<h2>Remaining seats: <span className="remaining_seats"></span></h2>
 			</div>
-			<div class="main_area">
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
-				<div class="seats"></div>
+			<div className="main_area">
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
+				<div className="seats"></div>
 			</div>
 		</div>
 		<script src="./index.js"></script>
